# robrix

./: .gitignore  Cargo.toml
.cargo/: audit.toml
.github/workflows/: build-social.yml  builds.yml  main.yml  release-social.yml  release.yml
docs/plans/: add-tillandsia-features.md  orchestration-state.json  social-media-architecture.md
robrix-social-events/: Cargo.toml
robrix-social-events/src/: caption.rs  event.rs  lib.rs  link_preview.rs  profile.rs  rsvp.rs
scripts/: setup-macos-signing.sh  setup-self-hosted-runner.sh
src/: app.rs  event_preview.rs  lib.rs  sliding_sync.rs  space_service_sync.rs  utils.rs
src/home/: add_room.rs  invite_modal.rs  main_desktop_ui.rs  navigation_tab_bar.rs  room_context_menu.rs  room_screen.rs  rooms_list.rs  space_lobby.rs
src/profile/: user_profile.rs
src/shared/: avatar.rs  html_or_plaintext.rs  jump_to_bottom_button.rs  styles.rs
src/social/: actions.rs  feed_room.rs  mod.rs  post.rs  profile_room.rs  reactions.rs  requests.rs
src/social/discovery/: mod.rs
src/social/events/: event_room.rs  mod.rs  rsvp.rs
src/social/friends/: friend_request.rs  friends_space.rs  mod.rs
src/social/newsfeed/: feed_aggregator.rs  feed_filter.rs  mod.rs
src/social/privacy/: mod.rs  sharing_guard.rs  validation.rs
src/social/widgets/: event_card.rs  feed_view.rs  friend_list.rs  mod.rs  post_card.rs  post_composer.rs  profile_page.rs
src/social_dummy/: mod.rs
tests/social_integration/: event_tests.rs  feed_tests.rs  friend_tests.rs  mod.rs  privacy_tests.rs  profile_tests.rs
